<resources>
    <string name="app_name">Glee</string>
    <string name="app_name_kor">글리</string>
    <string name="work_sample_title_1">별 헤는 밤</string>
    <string name="work_sample_author_1">윤동주</string>
    <string name="work_sample_preview_1">계절이 지나가는 하늘에는\n가을로 가득 차 있습니다.\n나는 아무 걱정도 없이\n가을 속의 별들을 \n다 헤일 듯합니다...</string>
    <string name="work_sample_content_1">
        계절이 지나가는 하늘에는 가을로 가득 차 있습니다. 나는 아무 걱정도 없이 가을 속의 별들을 다 헤일 듯합니다. 가슴 속에 하나 둘 새겨지는 별을
        이제 다 못 헤는 것은
        쉬이 아침이 오는 까닭이요,
        내일 밤이 남은 까닭이요,
        아직 나의 청춘이 다하지 않은 까닭입니다.
        별 하나에 추억과
        별 하나에 사랑과
        별 하나에 쓸쓸함과
        별 하나에 동경과
        별 하나에 시와
        별 하나에 어머니, 어머니,
        어머님, 나는 별 하나에 아름다운 말 한마디씩 불러 봅니다.
        소학교 때 책상을 같이 했던 아이들의 이름과, 패, 경, 옥, 이런 이국 소녀들의 이름과, 벌써 아기 어머니 된 계집애들의 이름과,
        가난한 이웃 사람들의 이름과, 비둘기, 강아지, 토끼, 노새, 노루, \'프랑시스 잠\', \'라이너 마리아 릴케\' 이런 시인의 이름을 불러 봅니다.
        이네들은 너무나 멀리 있습니다.
        별이 아스라이 멀듯이.
        어머님,
        그리고 당신은 멀리 북간도에 계십니다.
        나는 무엇인지 그리워
        이 많은 별빛이 내린 언덕 위에
        내 이름자를 써 보고
        흙으로 덮어 버리었습니다.
        딴은 밤을 새워 우는 벌레는
        부끄러운 이름을 슬퍼하는 까닭입니다.
        그러나 겨울이 지나고 나의 별에도 봄이 오면
        무덤 위에 파란 잔디가 피어나듯이
        내 이름자 묻힌 언덕 위에도
        자랑처럼 풀이 무성할 거외다.
        (1941. 11. 5.)

    </string>
    <string name="work_sample_title_2">사랑은 깊으기 푸른 하늘</string>
    <string name="work_sample_author_2">김영랑</string>
    <string name="work_sample_content_2">사랑은 깊으기 푸른 하늘
        맹세는 가볍기 흰구름쪽
        그 구름 사라진다 서럽지는 않으나
        그 하늘 큰 조화 못 믿지는 않으나
    </string>
    <string name="work_sample_title_3">내 마음을 아실 이</string>
    <string name="work_sample_author_3">김영랑</string>
    <string name="work_sample_content_3">
        내 마음을 아실 이
        내 혼자 마음 날 같이 아실 이
        그래도 어데나 계실 것이면
        내 마음에 때때로 어리우는 티끌과
        속임없는 눈물의 간곡한 방울방울
        푸른 밤 고이 맺는 이슬 같은 보람을
        보밴 듯 감추었다 내어드리지.
        아! 그립다.
        내 혼자 마음 날 같이 아실 이
        꿈에나 아득히 보이는가.
        향맑은 옥돌에 불이 달어
        사랑은 타기도 하오련만
        불빛에 연긴 듯 희미론 마음은
        사랑도 모르리 내 혼자 마음은.
    </string>
    <string name="work_sample_title_4">님 두시고 가는 길</string>
    <string name="work_sample_author_4">김영랑</string>
    <string name="work_sample_content_4">
        님 두시고 가는 길의 애끈한 마음이여
        한숨 쉬면 꺼질 듯한 조매로운 꿈길이여
        이 밤은 캄캄한 어느 뉘 시골인가
        이슬같이 고인 눈물을 손끝으로 깨치나니
    </string>
    <string name="work_sample_title_5">다정히도 불어오는 바람</string>
    <string name="work_sample_author_5">김영랑</string>
    <string name="work_sample_content_5">
        다정히도 불어오는 바람이길래
        내 숨결 가볍게 실어 보냈지
        하늘갓을 스치고 휘도는 바람
        어이면 한숨을 몰아다 주오
    </string>
    <string name="work_sample_title_6">서시</string>
    <string name="work_sample_author_6">윤동주</string>
    <string name="work_sample_content_6">
        죽는 날까지 하늘을 우러러 한 점 부끄럼이 없기를,
        잎새에 이는 바람에도 나는 괴로워했다.
        별을 노래하는 마음으로 모든 죽어 가는 것을 사랑해야지
        그리고 나한테 주어진 길을 걸어가야겠다.
        \n\n오늘 밤에도 별이 바람에 스치운다.
    </string>
    <string name="font_hambaksnow">함박눈</string>
    <string name="font_mapoFlowerIsland">마포꽃섬</string>
    <string name="font_cafe24SurroundAir">카페24 써라운드에어</string>
    <string name="font_aritaBuri">아리따 부리</string>
    <string name="font_shiningStar">카페24 빛나는별</string>
    <string name="font_middle_school_student">나눔손글씨 중학생</string>
    <string name="font_nanumBarunPen">나눔바른펜</string>
    <string name="font_nanumPen">나눔손글씨 펜</string>
    <string name="font_bmEuljiro">배민 을지로</string>
    <string name="draw_thickness">%d</string>
    <string name="work_detail_sample">이별은 미의 창조라는 한용운 시인의 시.. 이별이 아니면 눈물에서 죽었다가 웃음에서 다시 살아날 수가 없다는 말은 감히 헤아릴 수 없는 말이 아닌가 싶다. 두고두고 기억하고 싶은 말들이다. </string>
    <string name="work_detail_date">2020년 06월 02일 15:03</string>
    <string name="transcription_start">저도 필사할래요!</string>
    <string name="intro">필사를\n꼭\n종이에다가 해야 돼?</string>
    <string name="home_start_edit_text">직접 글감 작성하기</string>
    <string name="hint_edit_text">필사하고 싶은 글을 작성해주세요 :)</string>
    <string name="glee">글과 글씨를 이롭게 하다, 글리</string>
    <string name="count_character">0 / 100</string>
    <string name="font_size_edit">%d</string>
    <string name="participation_number">명의 사용자가 이 작품을 선택했습니다.</string>
    <string name="character_number">$d자</string>
    <string name="title_edit_dialog">필사를 시작할까요?</string>
    <string name="title_save_dialog">작품을 저장할까요?</string>
    <string name="notice_save_dialog">저장한 후에 둘러보기 탭에서 다른 작품도 감상해보세요!</string>
    <string name="oksu">스튜디오 옥수</string>
    <string name="team_introduction"></string>
    <string name="comment_jimin">안녕하세요 :) 글리 앱 디자인과 기획을 담당한 김지민입니다!\n뒤늦게 이 공모전을 발견하고 3일 동안 밤을 세워가며 열심히 만들었는데, 이렇게 앱 개발까지 완주하고 나니 긴 여운이 남습니다.
        직접 하나 하나 디자인 했는데, 여러분께서 마음에 들어하실지, 반응이 어떠실지 정말 궁금합니다!
        저희 앱 사랑해주시고 많이 많이 이용해주세요! 감사합니다☺
        \n\nEmail : loe@leolap.com
        \nInstagram : @deczim_
    </string>
    <string name="comment_sejin">안녕하세요! 글리 앱 개발과 기획을 담당한 최세진입니다.\n제가 개발한 앱을 공개하는 것은 처음이라 많이 설레기도 하고 긴장되기도 합니다.
        글리를 디자인하신 지민님과 팀을 결성하고 처음으로 함께 한 프로젝트여서 애정이 큰 만큼 여러분께서도 많이 좋아해주셨으면 좋겠어요😊\n그럼 다른 전시 작품들도 재밌게 감상하시고 행복한 하루 보내세요! 감사합니다🙏
        \n\nEmail : sejigner@gmail.com
        \nInstagram : @se_ntwickler
    </string>
    <string name="info_tumblbug">저희 전시 공간에 마련되어 있는 굿즈들은 글리 홍보를 위한 후속 프로젝트 굿즈들입니다.현재 클라우드 펀딩 서비스인 텀블벅에서 펀딩을 진행하고 있는데요, 저희 앱이 마음에 드셨다면 한번 놀러와주세요!\n스마트폰에 QR코드를 인식시키면 안내 노션 페이지로 연결됩니다! 😄</string>
    <string name="naver_font_license">
        Naver\n
        Copyright (c) 2010, NAVER Corporation (https://www.navercorp.com/), with Reserved Font Name Nanum, Naver Nanum, NanumGothic, Naver NanumGothic, NanumMyeongjo, Naver NanumMyeongjo, NanumBrush, Naver NanumBrush, NanumPen, Naver NanumPen, Naver NanumGothicEco, NanumGothicEco, Naver NanumMyeongjoEco, NanumMyeongjoEco, Naver NanumGothicLight, NanumGothicLight, NanumBarunGothic, Naver NanumBarunGothic, NanumSquareRound, NanumBarunPen, MaruBuri\n\n
        This Font Software is licensed under the SIL Open Font License, Version 1.1.\n
        This license is copied below, and is also available with a FAQ at: http://scripts.sil.org/OFL\n\n
        SIL OPEN FONT LICENSE\n
        Version 1.1 - 26 February 2007

        "Font Software" refers to the set of files released by the Copyright Holder(s) under this license and clearly marked as such. This may include source files, build scripts and documentation.\n
        "Reserved Font Name" refers to any names specified as such after the copyright statement(s).\n
        "Original Version" refers to the collection of Font Software components as distributed by the Copyright Holder(s).\n
        "Modified Version" refers to any derivative made by adding to, deleting, or substituting in part or in whole any of the components of the Original Version, by changing formats or by porting the Font Software to a new environment.‘\n\n
        "Author" refers to any designer, engineer, programmer, technical writer or other person who contributed to the Font Software.

        The goals of the Open Font License (OFL) are to stimulate worldwide development of collaborative font projects,

to support the font creation efforts of academic and linguistic communities, and to provide a free and open framework  in which fonts may be shared and improved in partnership with others.

The OFL allows the licensed fonts to be used, studied, modified and redistributed freely as long as they are not sold

by themselves. The fonts, including any derivative works, can be bundled, embedded, redistributed and/or sold with any software provided that any reserved names are not used by derivative works.

The fonts and derivatives, however, cannot be released under any other type of license.

The requirement for fonts to remain under this license does not apply to any document created using the fonts or their derivatives.

Permission is hereby granted, free of charge, to any person obtaining a copy of the Font Software, to use, study, copy, merge, embed, modify, redistribute, and sell modified and unmodified copies of the Font Software, subject to the following conditions:
        1) Neither the Font Software nor any of its individual components,in Original or Modified Versions, may be sold by itself.
        2) Original or Modified Versions of the Font Software may be bundled, redistributed and/or sold with any software, provided that each copy contains the above copyright notice and this license. These can be included either as stand-alone text files, human-readable headers or in the appropriate machine-readable metadata fields within text or binary files as long as those fields can be easily viewed by the user.
        3) No Modified Version of the Font Software may use the Reserved Font Name(s) unless explicit written

permission is granted by the corresponding Copyright Holder. This restriction only applies to the primary font name as presented to the users.
        4) The name(s) of the Copyright Holder(s) or the Author(s) of the Font Software shall not be used to promote, endorse or advertise any Modified Version, except to acknowledge the contribution(s) of the Copyright Holder(s) and the Author(s) or with their explicit written permission.
        5) The Font Software, modified or unmodified, in part or in whole, must be distributed entirely under this license, and must not be distributed any other license. The requirement for fonts to remain under this license does not apply to any document created using the Font Software.
        This license becomes null and void if any of the above conditions are not met.
        THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO ANY WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT OF COPYRIGHT, PATENT, TRADEMARK, OR OTHER RIGHT. IN NO EVENT SHALL THE COPYRIGHT HOLDER BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, INCLUDING ANY GENERAL, SPECIAL, INDIRECT, INCIDENTAL, OR CONSEQUENTIAL DAMAGES, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF THE USE OR INABILITY TO USE THE FONT SOFTWARE OR FROM OTHER DEALINGS IN THE FONT SOFTWARE.

    </string>
    <string name="notice_font_license">글리에 사용된 모든 글꼴의 라이선스는 마이페이지 탭 - 메뉴 -> 폰트 라이선스에서 확인하실 수 있습니다.</string>
</resources>