<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#F5F5F5"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".fragment.FragmentHome">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_font_license"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/sv_fonts"
            android:textSize="8sp"
            android:textColor="@color/grayText"/>

        <HorizontalScrollView
            android:id="@+id/sv_fonts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:paddingBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioGroup
                android:id="@+id/rg_fonts"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="26dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_hambaksnow"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@color/transparent"
                    android:checked="true"
                    android:fontFamily="@font/hambaksnow"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:text="@string/font_hambaksnow"
                    android:textColor="@drawable/radio_flat_text_selector"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_mapoFlowerIsland"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@color/transparent"
                    android:fontFamily="@font/mapo_flower_island"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:text="@string/font_mapoFlowerIsland"
                    android:textColor="@drawable/radio_flat_text_selector"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_cafe24SurroundAir"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@color/transparent"
                    android:fontFamily="@font/cafe24_surround_air"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:text="@string/font_cafe24SurroundAir"
                    android:textColor="@drawable/radio_flat_text_selector"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_cafe24_shining_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@color/transparent"
                    android:fontFamily="@font/cafe24_shining_star"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:text="@string/font_shiningStar"
                    android:textColor="@drawable/radio_flat_text_selector"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_middle_school_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@color/transparent"
                    android:fontFamily="@font/middle_school_student"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:text="@string/font_middle_school_student"
                    android:textColor="@drawable/radio_flat_text_selector"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_nanum_barun_pen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@color/transparent"
                    android:fontFamily="@font/nanum_barun_pen"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:text="@string/font_nanumBarunPen"
                    android:textColor="@drawable/radio_flat_text_selector"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_nanum_pen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@color/transparent"
                    android:fontFamily="@font/nanum_pen"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:text="@string/font_nanumPen"
                    android:textColor="@drawable/radio_flat_text_selector"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_bm_euljiro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@color/transparent"
                    android:fontFamily="@font/bm_euljiro"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:text="@string/font_bmEuljiro"
                    android:textColor="@drawable/radio_flat_text_selector"
                    android:textSize="18sp" />

            </RadioGroup>


        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:orientation="horizontal"
            android:id="@+id/rv_work_preview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_new_transcription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_fonts">


        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_new_transcription"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_new_transcription"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/home_start_edit_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>