<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_work_preview"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    app:cardCornerRadius="13dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/banner_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/glee_theme_gradation"
            android:orientation="vertical"
            android:paddingVertical="12dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_work_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="별 헤는 밤"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tv_work_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="윤동주"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/tv_work_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_work_title" />

            <TextView
                android:id="@+id/tv_work_character_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/character_number"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ic_people"
                android:layout_width="20dp"
                android:layout_height="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_people"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_work_title" />

            <TextView
                android:id="@+id/tv_work_participation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/participation_number"
                android:textColor="#50FFFFFF"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/ic_people"
                app:layout_constraintTop_toBottomOf="@+id/tv_work_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/tv_work_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hambaksnow"
            android:gravity="center"
            android:lineSpacingExtra="20dp"
            android:text="@string/work_sample_preview_1"
            android:textSize="22sp"
            android:paddingHorizontal="40dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner_info" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
